Changed CLI redshift to gtk verion.

--- a/.i3/config
+++ b/.i3/config
@@ -290,7 +290,7 @@ exec --no-startup-id xautolock -time 10 -locker blurlock
 # Added by me 
 exec --no-startup-id megasync 
 exec --no-startup-id xinput set-prop 9 302 -0.7
-exec --no-startup-id redshift -l 50:19 # Require redshift to be installed
+exec --no-startup-id redshift-gtk -l 50:19 # Require redshift to be installed
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
 
